// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSpinner should render correctly 1`] = `
<svg
  className="bpk-spinner bpk-spinner--dark"
  height="18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="2"
    opacity=".45"
    rx="1"
    width="4"
    x="1"
    y="8"
  />
  <rect
    height="2"
    rx="1"
    width="4"
    x="13"
    y="8"
  />
  <rect
    height="2"
    opacity=".3"
    rx="1"
    transform="rotate(-90 8 17)"
    width="4"
    x="8"
    y="17"
  />
  <rect
    height="2"
    opacity=".65"
    rx="1"
    transform="rotate(-90 8 5)"
    width="4"
    x="8"
    y="5"
  />
  <rect
    height="2"
    opacity=".25"
    rx="1"
    transform="rotate(-120 12.134 16.428)"
    width="4"
    x="12.134"
    y="16.428"
  />
  <rect
    height="2"
    opacity=".55"
    rx="1"
    transform="rotate(-120 6.134 6.036)"
    width="4"
    x="6.134"
    y="6.036"
  />
  <rect
    height="2"
    opacity=".2"
    rx="1"
    transform="rotate(-150 15.428 13.866)"
    width="4"
    x="15.428"
    y="13.866"
  />
  <rect
    height="2"
    opacity=".5"
    rx="1"
    transform="rotate(-150 5.036 7.866)"
    width="4"
    x="5.036"
    y="7.866"
  />
  <rect
    height="2"
    opacity=".85"
    rx="1"
    transform="rotate(150 16.428 5.866)"
    width="4"
    x="16.428"
    y="5.866"
  />
  <rect
    height="2"
    opacity=".4"
    rx="1"
    transform="rotate(150 6.036 11.866)"
    width="4"
    x="6.036"
    y="11.866"
  />
  <rect
    height="2"
    opacity=".75"
    rx="1"
    transform="rotate(120 13.866 2.572)"
    width="4"
    x="13.866"
    y="2.572"
  />
  <rect
    height="2"
    opacity=".35"
    rx="1"
    transform="rotate(120 7.866 12.964)"
    width="4"
    x="7.866"
    y="12.964"
  />
</svg>
`;

exports[`BpkSpinner should render correctly with a "alignToButton" attribute 1`] = `
<svg
  className="bpk-spinner bpk-spinner--dark bpk-spinner--align-to-button"
  height="18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="2"
    opacity=".45"
    rx="1"
    width="4"
    x="1"
    y="8"
  />
  <rect
    height="2"
    rx="1"
    width="4"
    x="13"
    y="8"
  />
  <rect
    height="2"
    opacity=".3"
    rx="1"
    transform="rotate(-90 8 17)"
    width="4"
    x="8"
    y="17"
  />
  <rect
    height="2"
    opacity=".65"
    rx="1"
    transform="rotate(-90 8 5)"
    width="4"
    x="8"
    y="5"
  />
  <rect
    height="2"
    opacity=".25"
    rx="1"
    transform="rotate(-120 12.134 16.428)"
    width="4"
    x="12.134"
    y="16.428"
  />
  <rect
    height="2"
    opacity=".55"
    rx="1"
    transform="rotate(-120 6.134 6.036)"
    width="4"
    x="6.134"
    y="6.036"
  />
  <rect
    height="2"
    opacity=".2"
    rx="1"
    transform="rotate(-150 15.428 13.866)"
    width="4"
    x="15.428"
    y="13.866"
  />
  <rect
    height="2"
    opacity=".5"
    rx="1"
    transform="rotate(-150 5.036 7.866)"
    width="4"
    x="5.036"
    y="7.866"
  />
  <rect
    height="2"
    opacity=".85"
    rx="1"
    transform="rotate(150 16.428 5.866)"
    width="4"
    x="16.428"
    y="5.866"
  />
  <rect
    height="2"
    opacity=".4"
    rx="1"
    transform="rotate(150 6.036 11.866)"
    width="4"
    x="6.036"
    y="11.866"
  />
  <rect
    height="2"
    opacity=".75"
    rx="1"
    transform="rotate(120 13.866 2.572)"
    width="4"
    x="13.866"
    y="2.572"
  />
  <rect
    height="2"
    opacity=".35"
    rx="1"
    transform="rotate(120 7.866 12.964)"
    width="4"
    x="7.866"
    y="12.964"
  />
</svg>
`;

exports[`BpkSpinner should render correctly with a "className" attribute 1`] = `
<svg
  className="bpk-spinner bpk-spinner--dark my-custom-class"
  height="18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="2"
    opacity=".45"
    rx="1"
    width="4"
    x="1"
    y="8"
  />
  <rect
    height="2"
    rx="1"
    width="4"
    x="13"
    y="8"
  />
  <rect
    height="2"
    opacity=".3"
    rx="1"
    transform="rotate(-90 8 17)"
    width="4"
    x="8"
    y="17"
  />
  <rect
    height="2"
    opacity=".65"
    rx="1"
    transform="rotate(-90 8 5)"
    width="4"
    x="8"
    y="5"
  />
  <rect
    height="2"
    opacity=".25"
    rx="1"
    transform="rotate(-120 12.134 16.428)"
    width="4"
    x="12.134"
    y="16.428"
  />
  <rect
    height="2"
    opacity=".55"
    rx="1"
    transform="rotate(-120 6.134 6.036)"
    width="4"
    x="6.134"
    y="6.036"
  />
  <rect
    height="2"
    opacity=".2"
    rx="1"
    transform="rotate(-150 15.428 13.866)"
    width="4"
    x="15.428"
    y="13.866"
  />
  <rect
    height="2"
    opacity=".5"
    rx="1"
    transform="rotate(-150 5.036 7.866)"
    width="4"
    x="5.036"
    y="7.866"
  />
  <rect
    height="2"
    opacity=".85"
    rx="1"
    transform="rotate(150 16.428 5.866)"
    width="4"
    x="16.428"
    y="5.866"
  />
  <rect
    height="2"
    opacity=".4"
    rx="1"
    transform="rotate(150 6.036 11.866)"
    width="4"
    x="6.036"
    y="11.866"
  />
  <rect
    height="2"
    opacity=".75"
    rx="1"
    transform="rotate(120 13.866 2.572)"
    width="4"
    x="13.866"
    y="2.572"
  />
  <rect
    height="2"
    opacity=".35"
    rx="1"
    transform="rotate(120 7.866 12.964)"
    width="4"
    x="7.866"
    y="12.964"
  />
</svg>
`;

exports[`BpkSpinner should render correctly with type as light 1`] = `
<svg
  className="bpk-spinner bpk-spinner--light"
  height="18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="2"
    opacity=".45"
    rx="1"
    width="4"
    x="1"
    y="8"
  />
  <rect
    height="2"
    rx="1"
    width="4"
    x="13"
    y="8"
  />
  <rect
    height="2"
    opacity=".3"
    rx="1"
    transform="rotate(-90 8 17)"
    width="4"
    x="8"
    y="17"
  />
  <rect
    height="2"
    opacity=".65"
    rx="1"
    transform="rotate(-90 8 5)"
    width="4"
    x="8"
    y="5"
  />
  <rect
    height="2"
    opacity=".25"
    rx="1"
    transform="rotate(-120 12.134 16.428)"
    width="4"
    x="12.134"
    y="16.428"
  />
  <rect
    height="2"
    opacity=".55"
    rx="1"
    transform="rotate(-120 6.134 6.036)"
    width="4"
    x="6.134"
    y="6.036"
  />
  <rect
    height="2"
    opacity=".2"
    rx="1"
    transform="rotate(-150 15.428 13.866)"
    width="4"
    x="15.428"
    y="13.866"
  />
  <rect
    height="2"
    opacity=".5"
    rx="1"
    transform="rotate(-150 5.036 7.866)"
    width="4"
    x="5.036"
    y="7.866"
  />
  <rect
    height="2"
    opacity=".85"
    rx="1"
    transform="rotate(150 16.428 5.866)"
    width="4"
    x="16.428"
    y="5.866"
  />
  <rect
    height="2"
    opacity=".4"
    rx="1"
    transform="rotate(150 6.036 11.866)"
    width="4"
    x="6.036"
    y="11.866"
  />
  <rect
    height="2"
    opacity=".75"
    rx="1"
    transform="rotate(120 13.866 2.572)"
    width="4"
    x="13.866"
    y="2.572"
  />
  <rect
    height="2"
    opacity=".35"
    rx="1"
    transform="rotate(120 7.866 12.964)"
    width="4"
    x="7.866"
    y="12.964"
  />
</svg>
`;

exports[`BpkSpinner should render correctly with type as primary 1`] = `
<svg
  className="bpk-spinner bpk-spinner--primary"
  height="18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="2"
    opacity=".45"
    rx="1"
    width="4"
    x="1"
    y="8"
  />
  <rect
    height="2"
    rx="1"
    width="4"
    x="13"
    y="8"
  />
  <rect
    height="2"
    opacity=".3"
    rx="1"
    transform="rotate(-90 8 17)"
    width="4"
    x="8"
    y="17"
  />
  <rect
    height="2"
    opacity=".65"
    rx="1"
    transform="rotate(-90 8 5)"
    width="4"
    x="8"
    y="5"
  />
  <rect
    height="2"
    opacity=".25"
    rx="1"
    transform="rotate(-120 12.134 16.428)"
    width="4"
    x="12.134"
    y="16.428"
  />
  <rect
    height="2"
    opacity=".55"
    rx="1"
    transform="rotate(-120 6.134 6.036)"
    width="4"
    x="6.134"
    y="6.036"
  />
  <rect
    height="2"
    opacity=".2"
    rx="1"
    transform="rotate(-150 15.428 13.866)"
    width="4"
    x="15.428"
    y="13.866"
  />
  <rect
    height="2"
    opacity=".5"
    rx="1"
    transform="rotate(-150 5.036 7.866)"
    width="4"
    x="5.036"
    y="7.866"
  />
  <rect
    height="2"
    opacity=".85"
    rx="1"
    transform="rotate(150 16.428 5.866)"
    width="4"
    x="16.428"
    y="5.866"
  />
  <rect
    height="2"
    opacity=".4"
    rx="1"
    transform="rotate(150 6.036 11.866)"
    width="4"
    x="6.036"
    y="11.866"
  />
  <rect
    height="2"
    opacity=".75"
    rx="1"
    transform="rotate(120 13.866 2.572)"
    width="4"
    x="13.866"
    y="2.572"
  />
  <rect
    height="2"
    opacity=".35"
    rx="1"
    transform="rotate(120 7.866 12.964)"
    width="4"
    x="7.866"
    y="12.964"
  />
</svg>
`;
